style.css
html
{
font-family: sans-serif;
font-size: 1em;
padding:0px;
margin:0px;
background-color:lightgray;
}

.container
{
margin:auto;
width:100%;
max-width:800px;
background-color:white;
}

.head
{
color:white;
background-color:black;
width:100%;
height:64px;
}

img
{
margin:0;
padding:0;
border:0;
}

.headleft
{
float:left;
height:64px;
}

.headright
{
float:right;
height:64px;
}

.headcenter
{
margin:auto;
text-align:center;
font-size: 1.5em;
font-weight:bold;
height:64px;
display:table;
}

.headcenter p
{
display: table-cell;
vertical-align: middle;
text-align: center;
line-height: 100%;
}

.clearer 
{
clear:both;
}

.entries
{
background-color:lightgray;
}

.entry
{
background-color:white;
border-bottom:1px double black;
display:block;
padding:2px;
cursor: pointer;
margin-bottom:5px;
}

.book
{
background-color:white;
border-bottom:1px double black;
min-height:80px;
margin-bottom:5px;
}

.navigation
{
display:none;
}

.entryTitle
{
font-weight:bold;
font-size: 1.1em;
}

.entryContent
{
font-style:italic;
font-size: 0.9em;
margin-left: 10px;
}

.cover
{
float:left;
padding:5px 10px;
}

.download
{
float:right;
}

.button
{
height:36px;
display: table;
width:80px;
margin:2px;
}


.button p, .button a
{
display: table-cell;
vertical-align: middle;
text-align: center;
}

#loading 
{
display:none;
position:fixed;
left:0;
top:0;
width:100%;
height:100%;
background-color: #ccc;
filter: alpha(opacity=70);
opacity: 0.70;
text-align: center;
padding-top: 120px;
}

.entrySection
{
margin-top: 8px;
margin-bottom: 18px;
}

.entrySection span
{
font-style:italic;
font-size: 1em;
}


.buttonEffect a
{
border-radius: 6px;
background: darkgray;  
background: -moz-radial-gradient(#666, black);
background: -webkit-radial-gradient(#666, black);
background: -ms-radial-gradient(#666, black);
background: radial-gradient(#666, black);
color: #EEE;
text-decoration : none;
font-weight: bold;
}

.pad6 a
{
padding: 6px;
}

.pad6
{
display: inline;
}

.search
{
display:none;
}

.search form
{
background-color: black;
margin-top: 3px;
float: right;
padding: 6px 10px;
border-radius: 6px;
}

.bookpopup
{
min-width: 400px;
}

